--- a/app/assets/stylesheets/utilities/_general.sass
+++ b/app/assets/stylesheets/utilities/_general.sass
@@ -90,19 +90,19 @@ hr
 
 .circle_yellow 
   background-color: yellow
-  background-image: -moz-radial-gradient(5px 5px 5deg, circle cover, yellow 0%,  yellow 100%, orange 10%)
+  background-image: -moz-radial-gradient(4px 5px 5deg, circle cover, yellow 0%,  yellow 100%, orange 10%)
   background-image: -webkit-radial-gradient(5px 5px, circle cover, yellow, orange)
   background-image: radial-gradient(4px 5px 5deg, circle cover, yellow 0%, yellow 100%, orange 10%)
 
 .circle_green
   background-color: green
-  background-image: -moz-radial-gradient(5px 5px 5deg, circle cover, yellow 0%,  green 100%, yellow 10%)
+  background-image: -moz-radial-gradient(4px 5px 5deg, circle cover, yellow 0%,  green 100%, yellow 10%)
   background-image: -webkit-radial-gradient(5px 5px, circle cover, green, yellow)
   background-image: radial-gradient(4px 5px 5deg, circle cover, yellow 0%, green 100%, yellow 10%)
 
 .circle_red
   background-color: red
-  background-image: -moz-radial-gradient(5px 5px 5deg, circle cover, yellow 0%,  red 100%, orange 10%)
+  background-image: -moz-radial-gradient(4px 5px 5deg, circle cover, red 10%, red 100%, orange 10%)
   background-image: -webkit-radial-gradient(5px 5px, circle cover, red, orange)
   background-image: radial-gradient(4px 5px 5deg, circle cover, yellow 0%, red 100%, orange 10%)
   /* width and height can be anything, as long as they're equal */
